--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = ["day-*", "www"]
 default-members = ["day-*"]
 
 [workspace.dependencies]
+evcxr_jupyter = "0.17.0"
 glam = "0.24.2"
 itertools = "0.12.0"
 nom = "7.1.3"
@@ -25,7 +26,7 @@ criterion = { version = "0.4", features = ["html_reports"] }
 nom_locate = "4.2.0"
 nom-supreme = "0.8.0"
 test-log = { version = "0.2.13", default-features = false, features = [
-    "trace",
+  "trace",
 ] }
 indicatif = { version = "0.17.7", features = ["rayon"] }
 
